k8s/helm/default-ingress/examples/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-dnw
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dotnet-works-com-wildcard-tls
    hosts:
    - "*.dotnet-works.com"
  - port:
      number: 443
      name: https-fld
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: freelancedirekt-nl-wildcard-tls
    hosts:
    - "*.freelancedirekt.nl"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-vs
  namespace: istio-system
spec:
  hosts:
  - "*.dotnet-works.com"
  - "*.freelancedirekt.nl"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        regex: /?(.*)
    rewrite:
      uri: "/"
    route:
    - destination:
        host: default-backend-service.default.svc.cluster.local
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.dotnet-works.com"
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.dotnet-works.com"
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
  - "tracing.dotnet-works.com"
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "prometheus.dotnet-works.com"
  gateways:
  - test-gateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
